Upgraded to 4.3.0 and js dependencies